--- a/index.html
+++ b/index.html
@@ -298,24 +298,28 @@
                     <ul class="portfolio-list list">
                     <li class="portfolio-item">
                             <div class="portfolio-item-cover">    
-                                <img src="./images/fiolet.jpg" class="portfolio-image" alt="fiolet" width="360" height="300">
+                                <img src="./images/fiolet.jpg" 
+                                    class="portfolio-image" 
+                                    alt="fiolet" 
+                                    width="360" 
+                                    height="300">
                             
-                                    <div class="portfolio-cover-block">
-                                        <p class="portfolio-cover-text">
-                                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
-                                            Ecommerce App ·
-                                            Cloud Storage App
-                                                </p>
-                                                    </div>
+                            <div class="portfolio-cover-block">
+                                <p class="portfolio-cover-text">
+                                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
+                                    Ecommerce App ·
+                                    Cloud Storage App
+                                        </p>
+                            </div>
                             </div>
                         
                             <div class="portfolio-item-wrap">
                                 <h3 class="portfolio-sub-title">
                                     Banking App
                                         </h3>
-                                            <p class="portfolio-text">
-                                                App
-                                                    </p>
+                                <p class="portfolio-text">
+                                    App
+                                        </p>
                             </div>
                     </li>
 
