--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <a href="./index.html" class="header-logo"> Web<span class="logo-color">Studio</span></a>
 
             <ul class="header-list list" >
-                <li class="header-list-item header-after">
-                    <a href="./index.html" class="header-list-link">Studio</a>
+                <li class="header-list-item">
+                    <a href="./index.html" class="header-list-link current">Studio</a>
                         </li>
 
                 <li class="header-list-item">
