--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <ul class="header-list list" >
                 <li class="header-list-item">
-                    <a href="./index.html" class="header-list-link">Studio</a>
+                    <a href="./index.html" class="current header-list-link ">Studio</a>
                         </li>
 
                 <li class="header-list-item">
@@ -326,13 +326,13 @@
                     <li class="portfolio-item">
                         <div class="portfolio-item-cover">
                             <img src="./images/scan.jpg" class="portfolio-image" alt="scan" width="360" height="300">
-                                <div class="portfolio-cover-block">
+                                
                                     <p class="portfolio-cover-text">
                                         14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit
                                         Ecommerce App ·
                                         Cloud Storage App
                                             </p>
-                                </div>
+                                
                         </div>
                                     <div class="portfolio-item-wrap">
                                         <h3 class="portfolio-sub-title">
